Updated to version 1.128.102

--- a/xim-library/ChangeLog.txt
+++ b/xim-library/ChangeLog.txt
@@ -1,4 +1,29 @@
 --- Log file for XIM library changes, including all express (IR,MIM,ARM), CxClasses and mapping: 
+**** 2009-06-29  v1.128.102
+--- XIM ---
+-- Extended_measure_representation_xim
+--- Make Measure_item_with_precision also subtype of qualified_representation_item
+
+--- Cx Classes ---
+-- Added new Cx classes
+--- jsdai.SDerived_shape_element_xim.CxDerived_shape_element
+--- jsdai.SDimension_tolerance_xim.CxGeoemtric_dimension
+--- jsdai.SExtended_measure_representation.CxMeasure_item_with_precision
+--- jsdai.SMixed_complex_types.CxLength_measure_with_unit$measure_item_with_precision$qualified_numerical_item_with_unit
+--- jsdai.SMixed_complex_types.CxLength_measure_with_unit$measure_item_with_precision
+
+--- Complex entities, lists ---
+-- Added new complex
+--- length_measure_with_unit+measure_item_with_precision
+
+**** 2009-06-16  v1.128.101
+- Fix bug #3147.
+-- Cx class --
+--- jsdai.SExternal_item_identification_assignment/CxExternal_source_identification
+-- Mapping --
+--- File_identification\module.path
+--- Document_definition\module.path
+
 **** 2009-05-26  v1.128.100
 
 --- XIM EXPRESS ---
